# aws-pi-reports

./: .gitignore  .pre-commit-config.yaml  .test.env  CONTRIBUTING.md  Makefile  README.md  out.txt  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml  python-publish.yml
aws_pi_reports/: __init__.py  aws.py  input_validation.py  main.py  reports.py  time.py
aws_pi_reports/docdb/: __init__.py  cli.py
aws_pi_reports/rds/: cli.py  reports.py
aws_pi_reports/reports_inputs/: counter_metrics.json  load_avg_top_sql.json  reference.txt  sql_avg_time_sqltype.sql
pg_stats_tools/: aws.py  format.py  input_read.py  main.py  psql.py  time.py  time_fn.py
pg_stats_tools/pg/: __init__.py  cli.py  reports.py.NO
pg_stats_tools/pg/stats/: cli.py  reports.py
pg_stats_tools/pg/stats/buffers/: cli.py  reports.py
pg_stats_tools/pg/stats/indexes/: cli.py  reports.py
pg_stats_tools/pg/stats/sql/: cli.py  reports.py
pg_stats_tools/reports_inputs/: active_sql_long_running.sql  buffers_index_cache_hits.sql  buffers_table_cache_hits.sql  buffers_usage.sql  indexes_usage.sql  indexes_usage_hints.sql  load_avg_top_wait_events.json  reference.txt  sql_time_stats_by_type.sql  top_sql_stats_by_type.sql  top_sql_stats_simplified_by_type.sql
tables_doc/: pg_stat_activity.txt  pg_stats.txt  pg_stats_statements.txt  views.txt
tests/: conftest.py  test_tests_working.py
